quarkus-reference-app/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reference-app
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    app.kubernetes.io/part-of: validated-patterns
